--- a/functions/package.json
+++ b/functions/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "axios": "^0.26.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1",
+    "firebase-functions": "^3.21.2",
     "node-mailjet": "^3.3.7"
   },
   "devDependencies": {
